<?xml version="1.0"?>
<package>
  <name>tf_extractor</name>
  <version>0.0.1</version>
  <description>tf_extractor listens to /tf and republishes the transforms between the specified two frames on the /tf_extractor/tf topic.</description>
  <author email="zhi.yan@utbm.fr">Zhi Yan</author>
  <maintainer email="zhi.yan@utbm.fr">Zhi Yan</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
